<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_add"
        android:title="Add"
        android:icon="@drawable/ic_add_24dp"
        android:showAsAction="ifRoom" />
</menu>
